--- a/springdemo-consumer/src/main/resources/application.properties
+++ b/springdemo-consumer/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8081
+server.port=8082
 
-spring.application.name=springdemo
+spring.application.name=springdemoconsumer
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dirge
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1qaz@1027
 
 
 #kafka…˙≤˙’ﬂ≈‰÷√
@@ -31,7 +31,6 @@ spring.cloud.nacos.discovery.server-addr=localhost:8848
 #spring.cloud.nacos.discovery.group=dev
 #spring.cloud.nacos.discovery.namespace=53ff1e1f-94c4-45ca-8515-88a85a592228
 
-management.endpoints.web.exposure.include=*
 
 
 
