--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>springdemo</module>
         <module>common</module>
         <module>flink-demo</module>
+        <module>spring-cloud-config</module>
+        <module>springdemo-consumer</module>
     </modules>
 
     <parent>
@@ -28,6 +30,7 @@
         <fastjson.version>1.2.83</fastjson.version>
         <lombok.version>1.18.24</lombok.version>
         <commonslang.version>3.12.0</commonslang.version>
+        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
     </properties>
 
     <dependencyManagement>
@@ -47,6 +50,13 @@
                 <scope>provided</scope>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
