--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <lombok.version>1.18.24</lombok.version>
         <commonslang.version>3.12.0</commonslang.version>
         <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
+        <spring.cloud.version>2021.0.8</spring.cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +49,14 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
