--- a/springdemo-consumer/src/main/resources/application.properties
+++ b/springdemo-consumer/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.redis.lettuce.pool.min-idle=0
 spring.cloud.nacos.discovery.server-addr=localhost:8848
 #spring.cloud.nacos.discovery.group=dev
 #spring.cloud.nacos.discovery.namespace=53ff1e1f-94c4-45ca-8515-88a85a592228
+#spring.cloud.nacos.discovery.enabled=false
 
 
 
