--- a/common/pom.xml
+++ b/common/pom.xml
@@ -41,7 +41,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
