--- a/springdemo/src/main/resources/application.properties
+++ b/springdemo/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8081
 
 spring.application.name=springdemo
+spring.cloud.nacos.discovery.enabled=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dirge
