增加nacos配置中心和dynamictp

--- a/springdemo/src/main/resources/application.properties
+++ b/springdemo/src/main/resources/application.properties
@@ -9,13 +9,13 @@ spring.datasource.username=root
 spring.datasource.password=
 
 
-#kafka生产者配置
+#kafka\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.kafka.bootstrap-servers=10.1.60.76:9092,10.1.60.77:9092,10.1.60.78:9092
-#发送重试次数
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0534\uFFFD\uFFFD\uFFFD
 spring.kafka.producer.retries=3
-#生产者每次发送的批次大小
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u00FF\uFFFD\u03B7\uFFFD\uFFFD\u0375\uFFFD\uFFFD\uFFFD\uFFFD\u03B4\uFFFD\u0421
 spring.kafka.producer.batch-size=16384
-#生产者缓冲区大小
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u07FB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0421
 spring.kafka.producer.buffer-memory=33554432
 
 
@@ -31,8 +31,74 @@ spring.redis.lettuce.pool.min-idle=0
 spring.cloud.nacos.discovery.server-addr=localhost:8848
 #spring.cloud.nacos.discovery.group=dev
 #spring.cloud.nacos.discovery.namespace=53ff1e1f-94c4-45ca-8515-88a85a592228
+#spring.cloud.nacos.config.server-addr=localhost:8848
 
 management.endpoints.web.exposure.include=*
+
+
+spring.dynamic.tp.enabled=true
+spring.dynamic.tp.enabledCollect=true
+spring.dynamic.tp.collectorTypes=micrometer,logging
+spring.dynamic.tp.logPath=/home/logs/dynamictp/user-center/
+spring.dynamic.tp.monitorInterval=5
+spring.dynamic.tp.platforms[0].platform=wechat
+spring.dynamic.tp.platforms[0].platformId=1
+spring.dynamic.tp.platforms[0].urlKey=3a700-127-4bd-a798-c53d8b69c
+spring.dynamic.tp.platforms[0].receivers=test1,test2
+spring.dynamic.tp.platforms[1].platform=ding
+spring.dynamic.tp.platforms[1].platformId=2
+spring.dynamic.tp.platforms[1].urlKey=f80dad441fcd655438f4a08dcd6a
+spring.dynamic.tp.platforms[1].secret=SECb5441fa6f375d5b9d21
+spring.dynamic.tp.platforms[1].receivers=18888888888
+spring.dynamic.tp.platforms[2].platform=lark
+spring.dynamic.tp.platforms[2].platformId=3
+spring.dynamic.tp.platforms[2].urlKey=0d944ae7-b24a-40
+spring.dynamic.tp.platforms[2].secret=3a750012874bdac5c3d8b69c
+spring.dynamic.tp.platforms[2].receivers=test1,test2
+spring.dynamic.tp.platforms[3].platform=email
+spring.dynamic.tp.platforms[3].platformId=4
+spring.dynamic.tp.platforms[3].receivers=253507605@qq.com
+spring.dynamic.tp.executors[0].threadPoolName=dtpExecutor1
+spring.dynamic.tp.executors[0].threadPoolAliasName=\u6D4B\u8BD5\u7EBF\u7A0B\u6C60
+spring.dynamic.tp.executors[0].executorType=common
+spring.dynamic.tp.executors[0].corePoolSize=6
+spring.dynamic.tp.executors[0].maximumPoolSize=8
+spring.dynamic.tp.executors[0].queueCapacity=2000
+spring.dynamic.tp.executors[0].queueType=VariableLinkedBlockingQueue
+spring.dynamic.tp.executors[0].rejectedHandlerType=CallerRunsPolicy
+spring.dynamic.tp.executors[0].keepAliveTime=60
+spring.dynamic.tp.executors[0].threadNamePrefix=test
+spring.dynamic.tp.executors[0].allowCoreThreadTimeOut=false
+spring.dynamic.tp.executors[0].waitForTasksToCompleteOnShutdown=true
+spring.dynamic.tp.executors[0].awaitTerminationSeconds=5
+spring.dynamic.tp.executors[0].preStartAllCoreThreads=false
+spring.dynamic.tp.executors[0].runTimeout=200
+spring.dynamic.tp.executors[0].queueTimeout=100
+spring.dynamic.tp.executors[0].taskWrapperNames[0]=ttl
+spring.dynamic.tp.executors[0].taskWrapperNames[1]=mdc
+spring.dynamic.tp.executors[0].notifyEnabled=true
+spring.dynamic.tp.executors[0].platformIds[0]=1
+spring.dynamic.tp.executors[0].platformIds[1]=2
+spring.dynamic.tp.executors[0].notifyItems[0].type=change
+spring.dynamic.tp.executors[0].notifyItems[0].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[1].type=capacity
+spring.dynamic.tp.executors[0].notifyItems[1].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[1].threshold=80
+spring.dynamic.tp.executors[0].notifyItems[1].platformIds[0]=2
+spring.dynamic.tp.executors[0].notifyItems[1].interval=120
+spring.dynamic.tp.executors[0].notifyItems[2].type=liveness
+spring.dynamic.tp.executors[0].notifyItems[2].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[2].threshold=80
+spring.dynamic.tp.executors[0].notifyItems[3].type=reject
+spring.dynamic.tp.executors[0].notifyItems[3].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[3].threshold=100
+spring.dynamic.tp.executors[0].notifyItems[4].type=run_timeout
+spring.dynamic.tp.executors[0].notifyItems[4].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[4].threshold=100
+spring.dynamic.tp.executors[0].notifyItems[5].type=queue_timeout
+spring.dynamic.tp.executors[0].notifyItems[5].enabled=true
+spring.dynamic.tp.executors[0].notifyItems[5].threshold=100
+
 
 
 
